src/sf/src/main/default/objects/Category__c/fields/IconUrl__c.field-meta.xml
<CustomField>
    <fullName>IconUrl__c</fullName>
    <defaultValue>&quot;/static/icons/categories/unknown.png&quot;</defaultValue>
    <label>Icon Url</label>
    <type>Url</type>
</CustomField>