src/sf/src/main/default/objects/Category__c/fields/IsCustom__c.field-meta.xml
<CustomField>
    <fullName>IsCustom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>