src/sf/src/main/default/objects/Category__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <label>TypeName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>