src/sf/src/main/default/objects/Category__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>