src/sf/src/main/default/objects/Category__c/validationRules/Custom_Category_Must_Have_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Category_Must_Have_User</fullName>
    <active>true</active>
    <errorConditionFormula>IsCustom__c &amp;&amp; (ISBLANK(User__c) || ISNULL(User__c))</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>The custom category must have a user assigned</errorMessage>
</ValidationRule>