src/sf/src/main/default/objects/Category__c/validationRules/Standard_Category_Cannot_Have_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_Category_Cannot_Have_User</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(IsCustom__c) &amp;&amp; NOT(ISBLANK(User__c))</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>The standard category cannot have a user assigned</errorMessage>
</ValidationRule>