src/sf/src/main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TypeName__c</columns>
    <columns>IsCustom__c</columns>
    <columns>IconUrl__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>